// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountInput renders MAX with estimated sendable amount 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={false}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "width": 60,
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
          "minWidth": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "minWidth": 0,
            "paddingBottom": 2,
            "paddingTop": 16,
          }
        }
      >
        <View
          accessibilityHint="Reset amount"
          accessibilityLabel="MAX"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "minWidth": 0,
              "paddingHorizontal": 4,
            }
          }
        >
          <Text
            allowFontScaling={true}
            maxFontSizeMultiplier={1.6}
            style={
              [
                {
                  "flexShrink": 1,
                  "fontWeight": "bold",
                  "maxWidth": "100%",
                  "minWidth": 24,
                  "paddingHorizontal": 0,
                  "paddingVertical": 0,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                },
                {
                  "color": "#111",
                  "fontSize": 36,
                },
              ]
            }
          >
            MAX
          </Text>
          <Text
            adjustsFontSizeToFit={true}
            allowFontScaling={true}
            maxFontSizeMultiplier={1.4}
            minimumFontScale={0.85}
            numberOfLines={1}
            onLongPress={[Function]}
            style={
              [
                {
                  "fontSize": 16,
                  "marginTop": 4,
                  "maxWidth": "100%",
                  "textAlign": "center",
                },
                {
                  "color": "#111",
                },
              ]
            }
          >
            ≈ 1.23456789 BTC
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "marginBottom": 12,
            "minWidth": 0,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          allowFontScaling={true}
          maxFontSizeMultiplier={1.5}
          minimumFontScale={0.9}
          numberOfLines={1}
          selectable={true}
          style={
            [
              {
                "color": "#9BA0A9",
                "fontSize": 16,
                "fontWeight": "600",
                "maxWidth": "100%",
              },
              {
                "writingDirection": "ltr",
              },
            ]
          }
        />
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "width": 60,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`AmountInput renders default state 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={false}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "width": 60,
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
          "minWidth": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "minWidth": 0,
            "paddingBottom": 2,
            "paddingTop": 16,
          }
        }
      >
        <TextInput
          accessibilityLabel="Enter amount"
          accessibilityValue={
            {
              "text": "0.001 BTC",
            }
          }
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          maxFontSizeMultiplier={2}
          maxLength={11}
          onChangeText={[Function]}
          placeholder="0"
          placeholderTextColor="#111"
          style={
            [
              {
                "flexShrink": 1,
                "fontWeight": "bold",
                "maxWidth": "100%",
                "minWidth": 24,
                "paddingHorizontal": 0,
                "paddingVertical": 0,
                "textAlign": "center",
                "textAlignVertical": "center",
              },
              {
                "color": "#111",
                "fontSize": 36,
              },
            ]
          }
          testID="BitcoinAmountInput"
          value="0.001"
        />
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "alignSelf": "center",
                "fontWeight": "600",
                "marginHorizontal": 4,
              },
              {
                "color": "#111",
              },
              {
                "fontSize": 15,
              },
            ]
          }
        >
           BTC
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "marginBottom": 12,
            "minWidth": 0,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          allowFontScaling={true}
          maxFontSizeMultiplier={1.5}
          minimumFontScale={0.9}
          numberOfLines={1}
          selectable={true}
          style={
            [
              {
                "color": "#9BA0A9",
                "fontSize": 16,
                "fontWeight": "600",
                "maxWidth": "100%",
              },
              {
                "writingDirection": "ltr",
              },
            ]
          }
        >
          100000-local_currency
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "width": 60,
          },
        ]
      }
    >
      <View
        accessibilityHint="Change input currency. BTC"
        accessibilityLabel="Change input currency"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "opacity": 1,
            "paddingHorizontal": 8,
            "paddingVertical": 12,
          }
        }
        testID="changeAmountUnitButton"
      >
        <Image
          source={
            {
              "testUri": "../../../img/round-compare-arrows-24-px.png",
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`AmountInput renders outdated-rate warning block 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={false}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "width": "100%",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "width": 60,
          },
        ]
      }
    />
    <View
      style={
        {
          "flex": 1,
          "minWidth": 0,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "minWidth": 0,
            "paddingBottom": 2,
            "paddingTop": 16,
          }
        }
      >
        <TextInput
          accessibilityLabel="Enter amount"
          accessibilityValue={
            {
              "text": "0.001 BTC",
            }
          }
          allowFontScaling={true}
          editable={true}
          keyboardType="numeric"
          maxFontSizeMultiplier={2}
          maxLength={11}
          onChangeText={[Function]}
          placeholder="0"
          placeholderTextColor="#111"
          style={
            [
              {
                "flexShrink": 1,
                "fontWeight": "bold",
                "maxWidth": "100%",
                "minWidth": 24,
                "paddingHorizontal": 0,
                "paddingVertical": 0,
                "textAlign": "center",
                "textAlignVertical": "center",
              },
              {
                "color": "#111",
                "fontSize": 36,
              },
            ]
          }
          testID="BitcoinAmountInput"
          value="0.001"
        />
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "alignSelf": "center",
                "fontWeight": "600",
                "marginHorizontal": 4,
              },
              {
                "color": "#111",
              },
              {
                "fontSize": 15,
              },
            ]
          }
        >
           BTC
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "marginBottom": 12,
            "minWidth": 0,
            "paddingHorizontal": 8,
          }
        }
      >
        <Text
          adjustsFontSizeToFit={true}
          allowFontScaling={true}
          maxFontSizeMultiplier={1.5}
          minimumFontScale={0.9}
          numberOfLines={1}
          selectable={true}
          style={
            [
              {
                "color": "#9BA0A9",
                "fontSize": 16,
                "fontWeight": "600",
                "maxWidth": "100%",
              },
              {
                "writingDirection": "ltr",
              },
            ]
          }
        >
          100000-local_currency
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "width": 60,
          },
        ]
      }
    >
      <View
        accessibilityHint="Change input currency. BTC"
        accessibilityLabel="Change input currency"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          {
            "bottom": 8,
            "left": 8,
            "right": 8,
            "top": 8,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "justifyContent": "center",
            "minHeight": 44,
            "minWidth": 44,
            "opacity": 1,
            "paddingHorizontal": 8,
            "paddingVertical": 12,
          }
        }
        testID="changeAmountUnitButton"
      >
        <Image
          source={
            {
              "testUri": "../../../img/round-compare-arrows-24-px.png",
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "justifyContent": "center",
        },
        {
          "alignItems": "center",
          "columnGap": 8,
          "flexDirection": "row",
          "marginHorizontal": 16,
          "marginVertical": 16,
          "rowGap": 0,
        },
      ]
    }
  >
    <Badge
      badgeStyle={
        {
          "backgroundColor": "#fc990e",
          "borderRadius": 5,
          "height": 10,
          "width": 10,
        }
      }
    />
    <Text
      style={
        {
          "flexShrink": 1,
          "textAlign": "center",
          "width": undefined,
          "writingDirection": "ltr",
        }
      }
    >
      Outdated rate at 04/12/2026 10:30 AM
    </Text>
    <View
      accessibilityLabel="Refresh"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={
        {
          "bottom": 8,
          "left": 8,
          "right": 8,
          "top": 8,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <Icon
        color="#222"
        name="arrows-rotate"
        size={16}
        type="font-awesome-6"
      />
    </View>
  </View>
</View>
`;
